-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.5.10, 6.8.4, 6.10.0 RC
-
None
-
ca9756017 (dev), e49f33e7b (6.10), d7153cda3 (tqtc/lts-6.8), 31fa50742 (tqtc/lts-6.5)
Code
import QtQuick import QtQuick.VirtualKeyboard.Settings Window { width: 600 height: 400 visible: true Component.onCompleted: { VirtualKeyboardSettings.wordCandidateList.autoHideDelay = 0 } }
qmllint output
Warning: Main.qml:10:27: Type "QQuickWordCandidateListSettings" of property "wordCandidateList" not found. This is likely due to a missing dependency entry or a type not being exposed declaratively. [unresolved-type] VirtualKeyboardSettings.wordCandidateList.autoHideDelay = 0 ^^^^^^^^^^^^^^^^^
Analysis
Here is an excerpt for the plugins.qmltypes file:
Module { Component { file: "private/qquickvirtualkeyboardsettings_p.h" name: "QtVirtualKeyboard::QQuickVirtualKeyboardSettings" Property { name: "wordCandidateList" type: "QQuickWordCandidateListSettings" } } Component { file: "private/qquickvirtualkeyboardsettings_p.h" name: "QtVirtualKeyboard::QQuickWordCandidateListSettings"} } }
The namespace is not captured by the first Component.
For Gerrit Dashboard: QTBUG-140553 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
679722,2 | Fully-qualify type name for VirtualKeyboardSettings.wordCandidateList | dev | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
679763,2 | Fully-qualify type name for VirtualKeyboardSettings.wordCandidateList | 6.10 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
679994,2 | Fully-qualify type name for VirtualKeyboardSettings.wordCandidateList | tqtc/lts-6.8 | qt/tqtc-qtvirtualkeyboard | Status: MERGED | +2 | 0 |
680083,2 | Fully-qualify type name for VirtualKeyboardSettings.wordCandidateList | tqtc/lts-6.5 | qt/tqtc-qtvirtualkeyboard | Status: MERGED | +2 | 0 |