Fully-qualify type name for VirtualKeyboardSettings.wordCandidateList

Fixes: QTBUG-140553
Pick-to: 6.10 6.8 6.5
Change-Id: I96c3e6a8132a89ef6f4eb9c736036eb2ccd2e191
Reviewed-by: Jarkko Koivikko <jarkko.koivikko@code-q.fi>